--- a/app/src/main/res/layout/activity_photo_editor.xml
+++ b/app/src/main/res/layout/activity_photo_editor.xml
@@ -36,7 +36,6 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="编辑"
                 android:textColor="@color/text_color_dark_898989"
                 android:textSize="@dimen/dimens_20dp" />
         </LinearLayout>
@@ -50,10 +49,14 @@
             android:layout_centerVertical="true"
             android:orientation="horizontal">
 
-            <Button
+            <TextView
+                android:paddingRight="@dimen/dimens_10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/btn_save"
-                style="@style/button.red"
-                android:text="保存" />
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:text="保存/分享" />
         </LinearLayout>
     </RelativeLayout>
 
@@ -124,7 +127,7 @@
                 android:layout_height="44dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:background="#cc880000"
+                android:background="#ff5a5d"
                 android:orientation="vertical">
 
                 <ImageView
