--- a/app/src/main/res/layout/activity_water_mark_category_management.xml
+++ b/app/src/main/res/layout/activity_water_mark_category_management.xml
@@ -8,6 +8,11 @@
     <include layout="@layout/layout_title_bar"></include>
     <!-- The PullToRefreshGridView replaces a standard GridView widget. -->
 
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <com.putao.widget.pulltorefresh.PullToRefreshGridView xmlns:ptr="http://schemas.android.com/apk/res-auto"
         android:id="@+id/pull_refresh_grid"
         android:layout_width="fill_parent"
@@ -15,6 +20,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="41dp"
         android:gravity="fill"
         android:horizontalSpacing="10dp"
         android:listSelector="@android:color/transparent"
@@ -23,5 +29,48 @@
         android:verticalSpacing="10dp"
         ptr:ptrDrawable="@drawable/default_ptr_rotate"
         ptr:ptrMode="disabled" />
+
+
+
+
+    <View
+        android:layout_above="@+id/choice_ll"
+        android:layout_width="match_parent"
+        android:background="#c2c2c2"
+        android:layout_height="1dp"/>
+
+
+
+    <LinearLayout
+        android:id="@+id/choice_ll"
+        android:background="#ffffff"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+        <TextView
+            android:textColor="#000000"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="全选"/>
+        <View
+            android:layout_gravity="center_vertical"
+            android:background="#c2c2c2"
+            android:layout_width="1dp"
+            android:layout_height="25dp"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textColor="#ff5859"
+            android:text="删除所选"/>
+
+    </LinearLayout>
+</RelativeLayout>
+
 
 </LinearLayout>
