--- a/app/src/main/res/layout/activity_collage_management.xml
+++ b/app/src/main/res/layout/activity_collage_management.xml
@@ -43,6 +43,7 @@
         android:layout_height="40dp"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/tv_select_all"
             android:textColor="#000000"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -56,6 +57,7 @@
             android:layout_height="25dp"/>
 
         <TextView
+            android:id="@+id/tv_delect_selected"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent"
