--- a/app/src/main/res/layout/layout_management_collage_grid_item.xml
+++ b/app/src/main/res/layout/layout_management_collage_grid_item.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/ll_main"
     android:descendantFocusability="blocksDescendants"
     android:gravity="center_horizontal"
     android:orientation="vertical">
@@ -29,14 +30,6 @@
             android:visibility="invisible" />
 
         <ImageView
-        android:id="@+id/collage_photo_ok_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-            android:src="@drawable/photo_ok_btn"
-        android:visibility="invisible" />
-        <ImageView
             android:id="@+id/collage_photo_new_iv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,15 +38,14 @@
             android:src="@drawable/photo_new_icon"
             android:visibility="invisible" />
         <ImageView
-            android:id="@+id/collage_photo_download_iv"
+            android:id="@+id/iv_check"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:src="@drawable/btn_22_01"
-            android:visibility="visible" />
+            android:layout_marginRight="@dimen/dimens_10dp"
+            android:layout_marginBottom="5dp"
+            android:src="@drawable/check_box_nor" />
     </RelativeLayout>
 
 </LinearLayout>
